--- a/_posts/2024-03-05-enclap.md
+++ b/_posts/2024-03-05-enclap.md
@@ -28,7 +28,7 @@ The contributions of the paper are as follows:
 
 ### EnCLAP
 
-The proposed method generates a caption from a given  file in two stages. Firstly, using the given , **EnCodec** and **CLAP** encoders generate a *discrete acoustic code* matrix and a *sequence-level* representation, respectively. Then, the two outputs are *concatenated* and passed to a pretrained **BART** model for captioning.
+The proposed method generates a caption from a given audio file in two stages. Firstly, using the given audio file, **EnCodec** and **CLAP** encoders generate a *discrete acoustic code* matrix and a *sequence-level* representation, respectively. Then, the two outputs are *concatenated* and passed to a pretrained **BART** model for captioning.
 
 #### EnCodec
 
@@ -38,7 +38,7 @@ EnCodec is a *neural codec* model that is based on a convolutional auto-encoder.
 
 #### CLAP
 
-Contrastive Language-Audio Pretraining (CLAP) connects audio to text into a joint multimodal space through dual encoders and contrastive learning. In this work, only the audio encoder and the projection layers that map to the shared embeddings space are used. Then, the output of the encoder and projection is used as the *sequence-level semnatic representation* of the audio.
+Contrastive Language-Audio Pretraining (CLAP) connects audio to text into a joint multimodal space through dual encoders and contrastive learning. In this work, only the audio encoder and the projection layers that map to the shared embeddings space are used. Then, the output of the encoder and projection is used as the *sequence-level semantic representation* of the audio.
 
 #### BART
 
@@ -76,7 +76,7 @@ $$
 
 #### Masked Codec Modeling (MCM)
 
-The paper introduces the *MCM* as an auxiliary training task that helps improve BART's acoustic awareness, which is the contextualized relatinoships among acoustic codes. To compute the corrupted matrix {% katexmm %}$\tilde{C}${% endkatexmm %} from the discrete acoustic code matrix {% katexmm %}$\tilde{C}${% endkatexmm %}, **span masking** of 15% is applied to each code sequence {% katexmm %}$c_{n,:}${% endkatexmm %}. Then, {% katexmm %}$N${% endkatexmm %} linear classifiers are added on top of the BART model to predict the ground truth code for the masked codes within {% katexmm %}$\tilde{c}_{n,:}${% endkatexmm %}. The loss is computed with *cross entropy* loss between the ground truth codes and predicted codes. The objective function is the sum of the loss of each code sequence. However, each sequence is scaled differently as earlier codebooks carry more signifance in RVQ.
+The paper introduces the *MCM* as an auxiliary training task that helps improve BART's acoustic awareness, which is the contextualized relationships among acoustic codes. To compute the corrupted matrix {% katexmm %}$\tilde{C}${% endkatexmm %} from the discrete acoustic code matrix {% katexmm %}$C${% endkatexmm %}, **span masking** of 15% is applied to each code sequence {% katexmm %}$c_{n,:}${% endkatexmm %}. Then, {% katexmm %}$N${% endkatexmm %} linear classifiers are added on top of the BART model to predict the ground truth code for the masked codes within {% katexmm %}$\tilde{c}_{n,:}${% endkatexmm %}. The loss is computed with *cross entropy* loss between the ground truth codes and predicted codes. The objective function is the sum of the loss of each code sequence. However, each sequence is scaled differently as earlier codebooks carry more significance in RVQ.
 
 {% katexmm %}
 $$\mathcal{L}_{mcm} = -\sum^N_{i=1}\left(\frac{1}{2}\right)^t \times \log p(c_{i,:}|\tilde{c}_{i,:})$$
